them nut exit vao lull

--- a/alarm.html
+++ b/alarm.html
@@ -17,11 +17,11 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="alarm.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
             <li><a href="#">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
-            <li><a href="#">Lull</a></li>
+            <li><a href="lull.html">Lull</a></li>
           </ul>
         </div>
         <div class="timkiem">
