--- a/lull.html
+++ b/lull.html
@@ -55,7 +55,7 @@
               </ul>
             </div>
         </div>
-      
+        <div class="close-button">X</div>
     </div>
 
   <script src="music-list.js"></script>
