--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="alarm.html">Home</a></li>
+            <li><a href="./Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
             <li><a href="#">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
