sua lai ten file

--- a/lull.html
+++ b/lull.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="code music player,JavaScript music player,Free JavaScript playlist music">
-  <link rel="stylesheet" href="lull.css">
+  <link rel="stylesheet" href="Lull.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="shortcut icon" href="https://png.pngtree.com/element_our/png_detail/20181022/music-and-live-music-logo-with-neon-light-effect-vector-png_199406.jpg" type="image/x-icon">
 </head>
@@ -59,5 +59,5 @@
     </div>
 
   <script src="music-list.js"></script>
-  <script src="lull.js"></script>
+  <script src="Lull.js"></script>
 </html>
