--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./alarm.css" />
+    <link rel="stylesheet" href="./Home.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
           <ul class="nav-links">
             <li><a href="./Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
-            <li><a href="#">Timer</a></li>
+            <li><a href="./Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
             <li><a href="lull.html">Lull</a></li>
           </ul>
@@ -39,6 +39,6 @@
       </div>
     </nav>
 
-    <script src="alarm.js"></script>
+    <script src="Home.js"></script>
   </body>
 </html>
