--- a/metho.html
+++ b/metho.html
@@ -18,7 +18,7 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="alarm.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
             <li><a href="alarm-clock.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
@@ -452,7 +452,7 @@
           </div>
         </div>
         <br /><br />
-        <h2>My info:</h2>
+        <h2>Contact with us:</h2>
         <hr />
         <div class="contact">
           <div>
@@ -463,6 +463,16 @@
           <div class="hii">
             <a href="https://www.instagram.com/hunlvne.04">
               <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+          <div class="hi">
+            <a href="">
+              <i class="fa-brands fa-tiktok"></i>
+            </a>
+          </div>
+          <div class="thr">
+            <a href="https://www.threads.net/@hunlvne.04">
+              <i class="fa-brands fa-threads"></i>
             </a>
           </div>
         </div>
