--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MySleepHub</title>
     <link rel="stylesheet" href="./Home.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -21,7 +21,7 @@
             <li><a href="metho.html">Methodology</a></li>
             <li><a href="./Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
-            <li><a href="lull.html">Lull</a></li>
+            <li><a href="Lull.html">Lull</a></li>
           </ul>
         </div>
         <div class="timkiem">
