--- a/metho.html
+++ b/metho.html
@@ -18,11 +18,11 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="alarm.html">Home</a></li>
+            <li><a href="./Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
-            <li><a href="alarm-clock.html">Timer</a></li>
+            <li><a href="./Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
-            <li><a href="lull.html">Lull</a></li>
+            <li><a href="./Lull.html">Lull</a></li>
           </ul>
         </div>
         <div class="timkiem">
