--- a/Home.html
+++ b/Home.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
+
     <title>Welcome to Deep sleeping </title>
-=======
-    <title>Document</title>
->>>>>>> cd0acf3d583a349b6b2c3e9baf1e78637a84a701
+
+
     <link rel="stylesheet" href="./Home.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -22,9 +21,9 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="./Home.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
-            <li><a href="./Timer.html">Timer</a></li>
+            <li><a href="Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
             <li><a href="lull.html">Lull</a></li>
           </ul>
@@ -43,7 +42,7 @@
         </div>
       </div>
     </nav>
-<<<<<<< HEAD
+
     <div class="coup">
       <img src="./images/anhcouple.jpg" alt="">
       <h2>Sleep Better, For the Journey Ahead</h2>
@@ -149,9 +148,9 @@
       </div>
     </div>
     <script src="alarm.js"></script>
-=======
+
 
     <script src="Home.js"></script>
->>>>>>> cd0acf3d583a349b6b2c3e9baf1e78637a84a701
+
   </body>
 </html>
