--- a/Timer.html
+++ b/Timer.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Arlarm</title>
-    <link rel="stylesheet" href="./Timer.css" />
+    <link rel="stylesheet" href="Timer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -30,6 +30,6 @@
       </div>
       <button>Set Alarm</button>
     </div>
-    <script src="./Timer.js"></script>
+    <script src="Timer.js"></script>
   </body>
 </html>
