--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MySleepHub</title>
-    <link rel="stylesheet" href="./Home.css" />
+    <link rel="stylesheet" href="Home.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -17,9 +17,9 @@
 
         <div class="menu">
           <ul class="nav-links">
-            <li><a href="./Home.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="metho.html">Methodology</a></li>
-            <li><a href="./Timer.html">Timer</a></li>
+            <li><a href="Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
             <li><a href="Lull.html">Lull</a></li>
           </ul>
