--- a/metho.html
+++ b/metho.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Methodology</title>
-    <link rel="stylesheet" href="./metho.css" />
+    <link rel="stylesheet" href="metho.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
