--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
         <div class="menu">
           <ul class="nav-links">
             <li><a href="Home.html">Home</a></li>
-            <li><a href="metho.html">Methodology</a></li>
+            <li><a href="Metho.html">Methodology</a></li>
             <li><a href="Timer.html">Timer</a></li>
             <li><a href="#">Sleep Suggestions</a></li>
             <li><a href="Lull.html">Lull</a></li>
