--- a/Home.html
+++ b/Home.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Welcome to Deep sleeping </title>
-
+    <title>Welcome to Deep sleeping</title>
 
     <link rel="stylesheet" href="./Home.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./images/font/css/all.css">
+    <link rel="stylesheet" href="./images/font/css/all.css" />
   </head>
   <body>
     <nav>
@@ -28,102 +27,116 @@
             <li><a href="Lull.html">Lull</a></li>
           </ul>
         </div>
-        <div class="timkiem">
-          <div class="searchBox">
-            <div class="searchToggle">
-              <i class="bx bx-search search"></i>
-              <i class="bx bx-x cancel"></i>
-            </div>
-            <div class="search-field">
-              <input type="text" placeholder="Search..." />
-              <i class="bx bx-search"></i>
-            </div>
-          </div>
+        <div class="login-button">
+          <a href="Login.html" class="btn-login">Login</a>
         </div>
       </div>
     </nav>
 
     <div class="coup">
-      <img src="./images/anhcouple.jpg" alt="">
+      <img src="./images/anhcouple.jpg" alt="" />
       <h2>Sleep Better, For the Journey Ahead</h2>
-      <p>Understand your sleep strengths and challenges so you can live life at full steam.</p>
+      <p>
+        Understand your sleep strengths and challenges so you can live life at
+        full steam.
+      </p>
     </div>
     <div class="title">
       <a href=""><h2>Tips To Improve Your Sleep</h2></a>
-      <hr>
+      <hr />
     </div>
     <div class="tip">
-      
       <div class="tip1">
-        <img src="./images/anhtip1.jpg" alt="">
+        <img src="./images/anhtip1.jpg" alt="" />
         <a href=""><h3>Melatonin Dosage: How Much Should You Take</h3></a>
-        <p>Wondering how much melatonin is too much? Is it safe for kids? Answers to your top melatonin dosage questions and more.</p>
+        <p>
+          Wondering how much melatonin is too much? Is it safe for kids? Answers
+          to your top melatonin dosage questions and more.
+        </p>
       </div>
       <div class="tip2">
-        <img src="./images/anhtip2.jpg" alt="">
+        <img src="./images/anhtip2.jpg" alt="" />
         <a href=""><h3>Healthy Sleep Tips For Women of All Ages</h3></a>
-        <p>Improving sleep habits and your sleep environment may be more conducive to consistent and restorative sleep when you need it most.</p>
+        <p>
+          Improving sleep habits and your sleep environment may be more
+          conducive to consistent and restorative sleep when you need it most.
+        </p>
       </div>
       <div class="tip3">
-        <img src="./images/anhtip3.jpg" alt="">
+        <img src="./images/anhtip3.jpg" alt="" />
         <a href=""><h3>Can’t Sleep? 8 Techniques You Can Do</h3></a>
-        <p>Waking up in the middle of the night is literally for the birds. Here are some tested tips and tricks to calm your mind and get you back to sleep in no time.</p>
+        <p>
+          Waking up in the middle of the night is literally for the birds. Here
+          are some tested tips and tricks to calm your mind and get you back to
+          sleep in no time.
+        </p>
       </div>
     </div>
     <div class="we">
       <div class="ctp">
         <h2>We are here for you</h2>
-        <p>At Sleep Foundation, we combine decades of experience in sleep health education with comprehensive product testing and the latest in sleep research to put you on the path to good sleep.</p>
+        <p>
+          At Sleep Foundation, we combine decades of experience in sleep health
+          education with comprehensive product testing and the latest in sleep
+          research to put you on the path to good sleep.
+        </p>
       </div>
       <div class="k">
-        <img src="images/anhf.jpg" alt="">
+        <img src="images/anhf.jpg" alt="" />
       </div>
     </div>
-    
+
     <div class="top">
       <h2>Popular Sleep Topics</h2>
-      <hr>
+      <hr />
       <div class="topp">
         <div class="top1">
-          <img src="./images/anhhome1.jpg" alt="">
+          <img src="./images/anhhome1.jpg" alt="" />
           <div class="ct-top1">
             <a href=""><h3>Snoring</h3></a>
-            <p>Put an End To You or Your Partner’s Snoring By Taking This First Step</p>
+            <p>
+              Put an End To You or Your Partner’s Snoring By Taking This First
+              Step
+            </p>
           </div>
         </div>
         <div class="top2">
-          <img src="./images/anhhome2.jpg" alt="">
+          <img src="./images/anhhome2.jpg" alt="" />
           <div class="ct-top2">
             <a href=""><h3>Sleep Hygiene</h3></a>
-            <p>Are You a Master of Sleep Hygiene? Let’s Talk About What It Is</p>
+            <p>
+              Are You a Master of Sleep Hygiene? Let’s Talk About What It Is
+            </p>
           </div>
         </div>
         <div class="top3">
-          <img src="./images/anhhome3.jpg" alt="">
+          <img src="./images/anhhome3.jpg" alt="" />
           <div class="ct-top3">
             <a href=""><h3>Sleep Deprivation</h3></a>
             <p>Understanding the Hidden Consequences of Not Sleeping Enough</p>
           </div>
         </div>
         <div class="top4">
-          <img src="./images/anhhome4.jpg" alt="">
+          <img src="./images/anhhome4.jpg" alt="" />
           <div class="ct-top4">
             <a href=""><h3>Stages of Sleep</h3></a>
             <p>Do You Know an NREM from an LOL? Let’s Talk Sleep Cycles</p>
           </div>
         </div>
         <div class="top5">
-          <img src="./images/anhhome5.jpg" alt="">
+          <img src="./images/anhhome5.jpg" alt="" />
           <div class="ct-top5">
             <a href=""><h3>Nutrition</h3></a>
-            <p>What (and When) You Eat Can Have a Big Affect On How You Sleep</p>
+            <p>
+              What (and When) You Eat Can Have a Big Affect On How You Sleep
+            </p>
           </div>
         </div>
       </div>
     </div>
     <div class="contactt">
       <h2>Contact with us for more:</h2>
-      <hr>
+      <hr />
       <div class="contact">
         <div>
           <a href="https://www.facebook.com/huanle04">
@@ -148,9 +161,6 @@
       </div>
     </div>
 
-
-
     <script src="Home.js"></script>
-
   </body>
 </html>
