--- a/Timer.html
+++ b/Timer.html
@@ -1,35 +1,112 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Alarm</title>
-    <link rel="stylesheet" href="Timer.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x.icon" />
+    <title>Alarm Clock</title>
+
+    <!--External CSS File-->
+    <link rel="stylesheet" href="Timer.css" />
+    <!--------------------------------------------------------------------------------------->
   </head>
-  <body>
-    <div class="wrapper">
-      <img src="./files/clock.svg" alt="clock" />
-      <h1>00:00:00 PM</h1>
-      <div class="content">
-        <div class="column">
-          <select>
-            <option value="Hour" selected disabled hidden>Hour</option>
-          </select>
+  <body onload="initClock()">
+    <div class="container">
+      <!--Analog Clock Style-->
+      <div class="clock">
+        <div class="circle" id="sc" style="--clr: rgb(131, 202, 106)">
+          <i></i>
         </div>
-        <div class="column">
-          <select>
-            <option value="Minute" selected disabled hidden>Minute</option>
-          </select>
+        <div class="circle circle2" id="mn" style="--clr: rgb(255, 255, 255)">
+          <i></i>
         </div>
-        <div class="column">
-          <select>
-            <option value="AM/PM" selected disabled hidden>AM/PM</option>
-          </select>
+        <div class="circle circle3" id="hr" style="--clr: rgb(102, 51, 153)">
+          <i></i>
         </div>
+
+        <span style="--i: 1"><b>1</b></span>
+        <span style="--i: 2"><b>2</b></span>
+        <span style="--i: 3"><b>3</b></span>
+        <span style="--i: 4"><b>4</b></span>
+        <span style="--i: 5"><b>5</b></span>
+        <span style="--i: 6"><b>6</b></span>
+        <span style="--i: 7"><b>7</b></span>
+        <span style="--i: 8"><b>8</b></span>
+        <span style="--i: 9"><b>9</b></span>
+        <span style="--i: 10"><b>10</b></span>
+        <span style="--i: 11"><b>11</b></span>
+        <span style="--i: 12"><b>12</b></span>
       </div>
-      <button>Set Alarm</button>
+      <!--------------------------------------------------------------------------------------->
+
+      <!--digital clock-->
+      <div id="ytime">
+        <div id="yhours" style="--clr: rgb(102, 51, 153)">00</div>
+        <div id="yminutes" style="--clr: rgb(255, 255, 255)">00</div>
+        <div id="yseconds" style="--clr: rgb(131, 202, 106)">00</div>
+        <div id="yampm">AM</div>
+      </div>
+      <!--------------------------------------------------------------------------------------->
     </div>
+
+    <!--Alarm Clock-->
+    <div class="alarm">
+      <div class="datetime">
+        <div class="date">
+          <div id="alarmclock">ALARM CLOCK</div>
+          <span id="dayName">Day</span>, <span id="month">Month</span>,
+          <span id="dayNum">00</span>,
+          <span id="year">Year</span>
+        </div>
+        <div class="time">
+          <span id="hour">00</span>: <span id="minutes">00</span>:
+          <span id="seconds">00</span>:
+          <span id="period">AM</span>
+        </div>
+        <button id="stopAlarm" onclick="stopAlarm()">Stop Alarm</button>
+      </div>
+
+      <hr />
+
+      <div class="setAlarm">
+        <div class="column">
+          <select>
+            <option value="setHour" selected hidden>Hour</option>
+          </select>
+        </div>
+
+        <div class="column">
+          <select>
+            <option value="setMinute" selected hidden>Minute</option>
+          </select>
+        </div>
+
+        <div class="column">
+          <select>
+            <option value="setSeconds" selected hidden>Seconds</option>
+          </select>
+        </div>
+
+        <div class="column">
+          <select>
+            <option value="AM/PM" selected hidden>AM/PM</option>
+          </select>
+        </div>
+
+        <button id="btn-setAlarm" type="submit">Set Alarm</button>
+      </div>
+
+      <hr />
+
+      <h3 id="alarm-h3"></h3>
+
+      <div class="alarmList"></div>
+    </div>
+    <!--------------------------------------------------------------------------------------->
+
+    <!--External Javascript File-->
     <script src="Timer.js"></script>
+    <!--------------------------------------------------------------------------------------->
   </body>
 </html>
