update logo and button close X

--- a/Home.html
+++ b/Home.html
@@ -12,11 +12,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./images/font/css/all.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/logo-page.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav>
       <div class="nav-bar">
-        <span class="logo"><a href="#">DsChien</a></span>
+        <div class="logo">
+          <a href="./Home.html">
+            <img src="./images/logo.jpg" alt="Logo" />
+          </a>
+        </div>
 
         <div class="menu">
           <ul class="nav-links">
