--- a/Timer.html
+++ b/Timer.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x.icon" />
+    <link
+      rel="shortcut icon"
+      href="./images/logo-page.jpg"
+      type="image/x-icon"
+    />
     <title>Alarm Clock</title>
 
     <!--External CSS File-->
@@ -102,6 +106,7 @@
       <h3 id="alarm-h3"></h3>
 
       <div class="alarmList"></div>
+      <div class="close-button">X</div>
     </div>
     <!--------------------------------------------------------------------------------------->
 
