--- a/metho.html
+++ b/metho.html
@@ -9,6 +9,11 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="./images/logo-page.jpg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./images/font/css/all.css" />
   </head>
   <body>
