--- a/Login.html
+++ b/Login.html
@@ -8,6 +8,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="Login.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/logo-page.jpg"
+      type="image/x-icon"
+    />
     <title>Login</title>
   </head>
 
@@ -70,6 +75,7 @@
         </div>
       </div>
     </div>
+    <div class="close-button">X</div>
 
     <script src="Login.js"></script>
   </body>
