--- a/lull.html
+++ b/lull.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="code music player,JavaScript music player,Free JavaScript playlist music">
   <link rel="stylesheet" href="Lull.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="shortcut icon" href="https://png.pngtree.com/element_our/png_detail/20181022/music-and-live-music-logo-with-neon-light-effect-vector-png_199406.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo-page.jpg" type="image/x-icon">
 </head>
 <body>
     <div>
