chinh lai home vs metho

--- a/metho.html
+++ b/metho.html
@@ -19,7 +19,7 @@
   <body>
     <nav>
       <div class="nav-bar">
-        <span class="logo"><a href="#">DsChien</a></span>
+        <span class="logo"><a href="Home.html"><img src="./images/logo.jpg" alt=""></a></span>
 
         <div class="menu">
           <ul class="nav-links">
